# qsentry

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg  setup.py
src/qsentry/: __init__.py  commands.py
src/qsentry/click/: get.py  main.py  update.py
