#
# For references of this file, see
#   * https://packaging.python.org/en/latest/tutorials/packaging-projects/
#   * https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#
[metadata]
name = qsentry
version = attr: qsentry.__version__
author = bqbn
author_email = bqbn@openken.com
description = A command wrapper for Sentry API
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bqbn/qsentry
project_urls =
    Bug Reports = https://github.com/bqbn/qsentry/issues
    Source = https://github.com/bqbn/qsentry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
keywords = devops utility utils

[options]
install_requires =
    click~=8.1
    jmespath~=1.0
    requests~=2.27
# The package_dir is a mapping of package names and directories.
# An empty package name represents the “root package” — the directory in
# the project that contains all Python source files for the package. In
# our case the src directory is designated the root package.
package_dir =
    = src
packages = find:
python_requires = >=3, <4

[options.entry_points]
console_scripts =
    qsentry = qsentry.qsentry:main

[options.extras_require]
dev = 
    build~=0.7.0
    pipenv-setup~=3.2
    twine~=3.2
    wheel~=0.34

[options.packages.find]
where = src
exclude =
    tests*
